# wasi-polyfill

./: .gitignore  LICENSE  README.md  REMEDIATION-PLAN.md  ROADMAP.md  design-document.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: upstream-patches.md
docs/api/: browser-interfaces.md
docs/architecture/: proxy-protocol.md  wasip2-overview.md
docs/behavior/: blobstore.md  cli.md  config.md  filesystem.md  http.md  keyvalue.md  logging.md  sockets.md
docs/design/: browser-interfaces.md
docs/guides/: error-handling.md  minimal-bundle.md  plugin-development.md  security.md  troubleshooting.md
examples/: advanced-usage.ts  basic-usage.ts  config-usage.ts  filesystem-usage.ts  http-usage.ts  logging-usage.ts  storage-usage.ts  wasip1-usage.ts  wasip3-usage.ts
examples/browser/: basic-usage.ts  dns-over-https.ts  opfs-filesystem.ts  service-worker-http.ts
examples/fractal-demo/: README.md  fractal-renderer.js  fractal-renderer.ts  fractal-wasm.js  fractal_renderer.py  host.py  index.html  main.py  pyproject.toml
examples/fractal-demo/component/: Cargo.toml
examples/fractal-demo/component/src/: lib.rs
examples/fractal-demo/wasm/: fractal.ts  package.json
examples/fractal-demo/wit/: frame-buffer.wit
patches/jco/: 1574-coerce-browser-file-read-bounds-to-numbers.patch
src/: index.ts
src/browser/: WEBGPU-PLAN.md  animation.ts  broadcast-channel.ts  canvas.ts  clipboard.ts  console.ts  dom.ts  events.ts  fetch.ts  fullscreen.ts  (+15 more)
(+385 files in other folders)
