[project]
name = "fractal-demo"
version = "0.1.0"
description = "Animated fractal renderer demonstrating wasi:frame-buffer with WebAssembly components"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.0.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "wasmtime>=27.0.0",
]

[project.scripts]
fractal = "fractal_renderer:main"
fractal-host = "host:main"
